--- a/7.19.ipynb
+++ b/7.19.ipynb
@@ -290,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -870,6 +872,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "while 1:\n",
+    "    N1 = random . randint(0,10)\n",
+    "    N2 = random . randint(0,10)\n",
+    "    input_ = eval(input('Sum'))\n",
+    "    if N1+ N2 == input_:\n",
+    "        print('正确')\n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -896,7 +922,7 @@
     "- a: start\n",
     "- b: end\n",
     "- k: step\n",
-    "- 注意for 是循环一切可迭代对象，而不是只能使用range"
+    "- 注意for 是循环一切可迭代对象，而不是只能使用range次数"
    ]
   },
   {
@@ -907,11 +933,149 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## EP:\n",
     "- ![](../Photo/145.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_ = 0\n",
+    "for i in range(1001):\n",
+    "    sum_  += 1\n",
+    "print(sum_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1001\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "sum_ = 0\n",
+    "while sum_<1001:\n",
+    "    sum_ += 1\n",
+    "print(sum_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142\n",
+      "10011\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "sum_ = 0\n",
+    "while sum_<10000:\n",
+    "    sum_ = sum_ + i\n",
+    "    i += 1\n",
+    "print(i)\n",
+    "print(sum_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10011\n",
+      "141\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_ = 0\n",
+    "for i in range(10000):\n",
+    "    sum_ += i\n",
+    "    if sum_ > 10000:\n",
+    "        break\n",
+    "print(sum_)\n",
+    "print(i)"
    ]
   },
   {
@@ -937,12 +1101,309 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 * 1 = 1|\n",
+      "2 * 1 = 2|2 * 2 = 4|\n",
+      "3 * 1 = 3|3 * 2 = 6|3 * 3 = 9|\n",
+      "4 * 1 = 4|4 * 2 = 8|4 * 3 = 12|4 * 4 = 16|\n",
+      "5 * 1 = 5|5 * 2 = 10|5 * 3 = 15|5 * 4 = 20|5 * 5 = 25|\n",
+      "6 * 1 = 6|6 * 2 = 12|6 * 3 = 18|6 * 4 = 24|6 * 5 = 30|6 * 6 = 36|\n",
+      "7 * 1 = 7|7 * 2 = 14|7 * 3 = 21|7 * 4 = 28|7 * 5 = 35|7 * 6 = 42|7 * 7 = 49|\n",
+      "8 * 1 = 8|8 * 2 = 16|8 * 3 = 24|8 * 4 = 32|8 * 5 = 40|8 * 6 = 48|8 * 7 = 56|8 * 8 = 64|\n",
+      "9 * 1 = 9|9 * 2 = 18|9 * 3 = 27|9 * 4 = 36|9 * 5 = 45|9 * 6 = 54|9 * 7 = 63|9 * 8 = 72|9 * 9 = 81|\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    for j in range(1,i+1):\n",
+    "        print('%s * %s = %s'%(i,j,i*j),end = '|')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 是素数\n",
+      "2 是素数\n",
+      "3 不是素数\n",
+      "4 不是素数\n",
+      "5 是素数\n",
+      "6 不是素数\n",
+      "7 是素数\n",
+      "8 不是素数\n",
+      "9 不是素数\n",
+      "10 不是素数\n",
+      "11 是素数\n",
+      "12 不是素数\n",
+      "13 是素数\n",
+      "14 不是素数\n",
+      "15 不是素数\n",
+      "16 不是素数\n",
+      "17 是素数\n",
+      "18 不是素数\n",
+      "19 是素数\n",
+      "20 不是素数\n",
+      "21 不是素数\n",
+      "22 不是素数\n",
+      "23 是素数\n",
+      "24 不是素数\n",
+      "25 是素数\n",
+      "26 不是素数\n",
+      "27 不是素数\n",
+      "28 不是素数\n",
+      "29 是素数\n",
+      "30 不是素数\n",
+      "31 是素数\n",
+      "32 不是素数\n",
+      "33 不是素数\n",
+      "34 不是素数\n",
+      "35 是素数\n",
+      "36 不是素数\n",
+      "37 是素数\n",
+      "38 不是素数\n",
+      "39 不是素数\n",
+      "40 不是素数\n",
+      "41 是素数\n",
+      "42 不是素数\n",
+      "43 是素数\n",
+      "44 不是素数\n",
+      "45 不是素数\n",
+      "46 不是素数\n",
+      "47 是素数\n",
+      "48 不是素数\n",
+      "49 是素数\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,50):\n",
+    "    if i == 2:\n",
+    "        print(i,'是素数')\n",
+    "    elif i % 2 == 0 or i % 3 == 0:\n",
+    "        print(i,'不是素数')\n",
+    "    else:\n",
+    "        print(i,'是素数')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 关键字 break 和 continue\n",
     "- break 跳出循环，终止循环\n",
     "- continue 跳出此次循环，继续执行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "0 3\n",
+      "0 4\n",
+      "0 5\n",
+      "0 6\n",
+      "0 7\n",
+      "0 8\n",
+      "0 9\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "1 5\n",
+      "1 6\n",
+      "1 7\n",
+      "1 8\n",
+      "1 9\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n",
+      "2 5\n",
+      "2 6\n",
+      "2 7\n",
+      "2 8\n",
+      "2 9\n",
+      "3 0\n",
+      "3 1\n",
+      "3 2\n",
+      "3 3\n",
+      "3 4\n",
+      "3 5\n",
+      "3 6\n",
+      "3 7\n",
+      "3 8\n",
+      "3 9\n",
+      "4 0\n",
+      "4 1\n",
+      "4 2\n",
+      "4 3\n",
+      "4 4\n",
+      "4 5\n",
+      "4 6\n",
+      "4 7\n",
+      "4 8\n",
+      "4 9\n",
+      "5 0\n",
+      "5 1\n",
+      "5 2\n",
+      "5 3\n",
+      "5 4\n",
+      "5 5\n",
+      "5 6\n",
+      "5 7\n",
+      "5 8\n",
+      "5 9\n",
+      "6 0\n",
+      "6 1\n",
+      "6 2\n",
+      "6 3\n",
+      "6 4\n",
+      "6 5\n",
+      "6 6\n",
+      "6 7\n",
+      "6 8\n",
+      "6 9\n",
+      "7 0\n",
+      "7 1\n",
+      "7 2\n",
+      "7 3\n",
+      "7 4\n",
+      "7 5\n",
+      "7 6\n",
+      "7 7\n",
+      "7 8\n",
+      "7 9\n",
+      "8 0\n",
+      "8 1\n",
+      "8 2\n",
+      "8 3\n",
+      "8 4\n",
+      "8 5\n",
+      "8 6\n",
+      "8 7\n",
+      "8 8\n",
+      "8 9\n",
+      "9 0\n",
+      "9 1\n",
+      "9 2\n",
+      "9 3\n",
+      "9 4\n",
+      "9 5\n",
+      "9 6\n",
+      "9 7\n",
+      "9 8\n",
+      "9 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(10):\n",
+    "        print(i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "0 3\n",
+      "0 4\n",
+      "0 5\n",
+      "1 0\n",
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "1 5\n",
+      "2 0\n",
+      "2 1\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n",
+      "2 5\n",
+      "3 0\n",
+      "3 1\n",
+      "3 2\n",
+      "3 3\n",
+      "3 4\n",
+      "3 5\n",
+      "4 0\n",
+      "4 1\n",
+      "4 2\n",
+      "4 3\n",
+      "4 4\n",
+      "4 5\n",
+      "5 0\n",
+      "5 1\n",
+      "5 2\n",
+      "5 3\n",
+      "5 4\n",
+      "5 5\n",
+      "6 0\n",
+      "6 1\n",
+      "6 2\n",
+      "6 3\n",
+      "6 4\n",
+      "6 5\n",
+      "7 0\n",
+      "7 1\n",
+      "7 2\n",
+      "7 3\n",
+      "7 4\n",
+      "7 5\n",
+      "8 0\n",
+      "8 1\n",
+      "8 2\n",
+      "8 3\n",
+      "8 4\n",
+      "8 5\n",
+      "9 0\n",
+      "9 1\n",
+      "9 2\n",
+      "9 3\n",
+      "9 4\n",
+      "9 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(10):\n",
+    "        print(i,j)\n",
+    "        if j==5:\n",
+    "            break #continue"
    ]
   },
   {
@@ -964,11 +1425,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integer_sum = 0\n",
+    "positive_numbers = 0\n",
+    "minus_numbers = 0\n",
+    "temp = 1\n",
+    "while temp == 1:\n",
+    "    integer = int(input())\n",
+    "    if integer > 0 :\n",
+    "        positive_numbers += 1\n",
+    "    elif integer < 0:\n",
+    "        minus_numbers += 1\n",
+    "    elif integer == 0:\n",
+    "        break\n",
+    "    integer_sum += integer\n",
+    "print('正数个数：',positive_numbers)\n",
+    "print('负数个数',minus_numbers)\n",
+    "print('总和',integer_sum)\n",
+    "print('平均数',float(integer_sum / (positive_numbers + minus_numbers)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 2\n",
     "![](../Photo/59.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21525.0\n",
+      "22601.25\n",
+      "23731.3125\n",
+      "24917.878125\n",
+      "16288.946267774414\n"
+     ]
+    }
+   ],
+   "source": [
+    "i= 1\n",
+    "b = 10000\n",
+    "sum_ = 0\n",
+    "for i in range(10):\n",
+    "    sum_ = (b * 0.05) + b\n",
+    "    b = sum_\n",
+    "    i += 1\n",
+    "    if i < 5:\n",
+    "        sum_ += (b * 0.05) + b\n",
+    "        print(sum_)\n",
+    "print(sum_)"
    ]
   },
   {
@@ -980,11 +1497,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "-2\n",
+      "2\n",
+      "0\n",
+      "正数个数： 2\n",
+      "负数个数 1\n",
+      "总和 8\n",
+      "平均数 2.6666666666666665\n"
+     ]
+    }
+   ],
+   "source": [
+    "integer_sum = 0\n",
+    "positive_numbers = 0\n",
+    "minus_numbers = 0\n",
+    "temp = 1\n",
+    "while temp == 1:\n",
+    "    integer = int(input())\n",
+    "    if integer > 0 :\n",
+    "        positive_numbers += 1\n",
+    "    elif integer < 0:\n",
+    "        minus_numbers += 1\n",
+    "    elif integer == 0:\n",
+    "        break\n",
+    "    integer_sum += integer\n",
+    "print('正数个数：',positive_numbers)\n",
+    "print('负数个数',minus_numbers)\n",
+    "print('总和',integer_sum)\n",
+    "print('平均数',float(integer_sum / (positive_numbers + minus_numbers)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 4\n",
     "![](../Photo/60.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120 150 180 210 240 270 300 330 360 390 420 450 480 510 540 570 600 630 660 690 720 750 780 810 840 870 900 930 960 990 "
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100,1000):\n",
+    "    if i % 5 == 0 and i % 6 == 0:\n",
+    "          print(i,end = ' ')"
    ]
   },
   {
@@ -996,6 +1572,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "while n * n < 12000:\n",
+    "    n = n + 1\n",
+    "    print(n)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1004,11 +1600,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 7\n",
     "![](../Photo/63.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.397003949278504\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "a = i\n",
+    "while i<50000:\n",
+    "    i += 1\n",
+    "    a += 1/i\n",
+    "print(a)"
    ]
   },
   {
@@ -1020,11 +1645,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46.10341520985016\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "i = 1\n",
+    "while i < 97:\n",
+    "    d += i/a\n",
+    "    a += 2\n",
+    "    i += 2\n",
+    "print(d)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 9\n",
     "![](../Photo/65.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi = 3.141392653591791\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 0\n",
+    "i = 1 #控制分母\n",
+    "j = 1 #控制符号\n",
+    "while True:\n",
+    "    temp = 1 / i * j\n",
+    "    if abs(temp) < pow(10,-4):\n",
+    "        break\n",
+    "    pi += temp\n",
+    "    i += 2\n",
+    "    j *= -1\n",
+    "pi *= 4\n",
+    "print('pi =',pi)"
    ]
   },
   {
@@ -1036,11 +1712,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "6\n",
+      "[1, 2, 4, 7, 14]\n",
+      "28\n",
+      "[1, 2, 4, 8, 16, 31, 62, 124, 248]\n",
+      "496\n",
+      "[1, 2, 4, 8, 16, 32, 64, 127, 254, 508, 1016, 2032, 4064]\n",
+      "8128\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [ ]\n",
+    "for n in range (1,10000):\n",
+    "    for a in range (1,n):\n",
+    "        if n%a ==0:\n",
+    "            l.append(a)\n",
+    "    if sum(l)==n:\n",
+    "        print (l)\n",
+    "        print (n)\n",
+    "    l = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 11\n",
     "![](../Photo/67.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "1 5\n",
+      "1 6\n",
+      "2 1\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n",
+      "2 5\n",
+      "2 6\n",
+      "3 1\n",
+      "3 2\n",
+      "3 3\n",
+      "3 4\n",
+      "3 5\n",
+      "3 6\n",
+      "4 1\n",
+      "4 2\n",
+      "4 3\n",
+      "4 4\n",
+      "4 5\n",
+      "4 6\n",
+      "5 1\n",
+      "5 2\n",
+      "5 3\n",
+      "5 4\n",
+      "5 5\n",
+      "5 6\n",
+      "6 1\n",
+      "6 2\n",
+      "6 3\n",
+      "6 4\n",
+      "6 5\n",
+      "6 6\n",
+      "组合总个数： 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "for i in range (1,7):\n",
+    "    for j in range(1,7):\n",
+    "        a += 1\n",
+    "        print (i,j)\n",
+    "print('组合总个数：',a)"
    ]
   },
   {
