--- a/7.23.ipynb
+++ b/7.23.ipynb
@@ -762,114 +762,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class money:\n",
-    "    def __init__(self):\n",
-    "        self.id ='1122'\n",
-    "        self.qian = '20000'\n",
-    "    def num_(self):\n",
-    "        zh = input('id:')\n",
-    "        if zh == self.id:\n",
-    "            print('进入账户')\n",
-    "        else:\n",
-    "            print('无效')\n",
-    "    def input_(self):\n",
-    "        num= eval(input('>>'))\n",
-    "        return num\n",
-    "    def qu(self):\n",
-    "        num = self.input_()\n",
-    "        b= self.qian - self.num\n",
-    "        return b\n",
-    "    def cong(self):\n",
-    "        num = self.input_()\n",
-    "        c=self.qian + self.num\n",
-    "        return c"
+    "    \"\"\"\n",
+    "    定义一个类\n",
+    "    \"\"\"\n",
+    "    def __init__(self,id_=0,balance=100,nianlilv=0):\n",
+    "        \"\"\"\n",
+    "        初始化\n",
+    "        设置初始变量\n",
+    "        \"\"\"\n",
+    "        self.id_=id_\n",
+    "        self.balance=balance\n",
+    "        self.nianlilv=nianlilv\n",
+    "    def getmonthlyinterestrate(self):\n",
+    "        \"\"\"\n",
+    "        定义函数\n",
+    "        计算月利率\n",
+    "        \"\"\"\n",
+    "        self.getmonthlyinterestrate=self.balance*(self.nianlilv/12)/100\n",
+    "        print('月利率为： ',self.getmonthlyinterestrate)\n",
+    "    def getmonthlyinterest(self):\n",
+    "        \"\"\"\n",
+    "        定义函数\n",
+    "        计算月利息\n",
+    "        \"\"\"\n",
+    "        self.getmonthlyinterest=self.balance*self.getmonthlyinterestrate\n",
+    "        print('月利息为： ',self.getmonthlyinterest)\n",
+    "    def withdraw(self):\n",
+    "        \"\"\"\n",
+    "        定义函数\n",
+    "        计算取款后的余额\n",
+    "        \"\"\"\n",
+    "        money=eval(input('请输入取款金额：'))\n",
+    "        self.shengyu=self.balance-money\n",
+    "        print('账户剩余金额：',self.shengyu)\n",
+    "    def deposit(self):\n",
+    "        \"\"\"\n",
+    "        定义函数\n",
+    "        计算存款后的余额\n",
+    "        \"\"\"\n",
+    "        money_=eval(input('请输入存入金额：'))\n",
+    "        self.shengyu=self.shengyu+money_\n",
+    "        print('账户余额为：',self.shengyu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bb=money()"
+    "bb=money(1122,20000,4.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id:1122\n",
-      "进入账户\n"
+      "月利率为：  75.0\n"
      ]
     }
    ],
    "source": [
-    "bb.num_()"
+    "bb.getmonthlyinterestrate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>2500\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2500"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bb.input_()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">>2500\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'money' object has no attribute 'num'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-92e31c7535b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcong\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-19-2a54e978b19a>\u001b[0m in \u001b[0;36mcong\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mcong\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mnum\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m         \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mqian\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'money' object has no attribute 'num'"
+      "请输入取款金额：2500\n",
+      "账户剩余金额： 17500\n"
      ]
     }
    ],
    "source": [
-    "bb.cong()"
+    "bb.withdraw()"
    ]
   },
   {
@@ -879,22 +861,6 @@
     "- 3\n",
     "![](../Photo/93.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-b811fc268333>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-38-b811fc268333>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    public class Fan {\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
